# cpp-library-pip

./: requirements.txt
src/: pyproject.toml
