[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "cpp-project-package"
version = "0.0.1"
authors = [
  { name="Vikant Sonawane", email="x21210403@student.ncirl.ie" },
]
description = "A package to demonstrate a library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"